// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button No Icon 1`] = `
<button
  className="button"
>
  BUTTON
</button>
`;

exports[`Storyshots Button With Icon 1`] = `
<button
  className="imageButton"
>
  <svg
    class="image"
    fill="none"
    height="24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2Z"
    />
  </svg>
  BUTTON
</button>
`;

exports[`Storyshots Contact Primary 1`] = `
<section
  className="section"
>
  <h2
    className="headline"
  >
    Skill
  </h2>
  <p
    className="body"
  >
    Android/Kotlin エンジニア。その他 Swift/iOS JavaScript, TypeScript, Ruby など。詳細は
     
    <a
      className="link"
      href="https://github.com/hmiyado/resume"
    >
      GitHub レジュメ
    </a>
     
    を参照。
  </p>
  <h2
    className="headline"
  >
    Price
  </h2>
  <p
    className="body"
  >
    時間単価6000円〜。詳細要相談。
  </p>
  <h2
    className="headline"
  >
    Contact
  </h2>
  <p
    className="body"
  >
    <a
      className="link"
      href="https://twitter.com/miyado20th"
    >
      Twitter
    </a>
  </p>
</section>
`;

exports[`Storyshots Entry Entry 1 1`] = `
Array [
  <h2
    className="headline"
  >
    GW
  </h2>,
  <p
    className="body"
  >
    GW はコーディングしたり、リモートゲームしたり、無計画だったわりには楽しく過ごせた。コーディングでは2年前のリポジトリを引っ張り出して整理したら、思っていた以上に興が乗った。次に触るのは2年後のGWかもしれない。
  </p>,
  <div
    className="footer"
  >
    <div
      className="text"
    >
      2021-05-05T21:12
    </div>
    <div
      className="text"
    >
      hmiyado
    </div>
  </div>,
]
`;

exports[`Storyshots Entry Primary 1`] = `
Array [
  <h2
    className="headline"
  >
    short title
  </h2>,
  <p
    className="body"
  >
    body
  </p>,
  <div
    className="footer"
  >
    <div
      className="text"
    >
      2021-05-05T21:12
    </div>
    <div
      className="text"
    >
      hmiyado
    </div>
  </div>,
]
`;

exports[`Storyshots Sentence Long 1`] = `
Array [
  <h2
    className="headline"
  >
    long long long long long long title
  </h2>,
  <p
    className="body"
  />,
]
`;

exports[`Storyshots Sentence Short 1`] = `
Array [
  <h2
    className="headline"
  >
    short title
  </h2>,
  <p
    className="body"
  />,
]
`;

exports[`Storyshots TextArea Primary 1`] = `
<div
  className="formContainer"
>
  <label
    className="label"
    htmlFor="Label"
  >
    Label
  </label>
  <textarea
    className="textarea"
    id="Label"
    name="Label"
  />
</div>
`;

exports[`Storyshots TextField No Icon 1`] = `
<div>
  <div
    className="formContainer"
  >
    <label
      className="label"
      htmlFor="Label"
    >
      Label
    </label>
    <div
      className="textLine"
    >
      <input
        className="input"
        id="Label"
        name="Label"
        type="text"
      />
    </div>
  </div>
  <div
    className="assistiveText"
  >
    Assistive text
  </div>
</div>
`;

exports[`Storyshots TextField No Icon No Assistive Text 1`] = `
<div>
  <div
    className="formContainer"
  >
    <label
      className="label"
      htmlFor="Label"
    >
      Label
    </label>
    <div
      className="textLine"
    >
      <input
        className="input"
        id="Label"
        name="Label"
        type="text"
      />
    </div>
  </div>
  <div
    className="assistiveText"
  />
</div>
`;

exports[`Storyshots TextField With Icon 1`] = `
<div>
  <div
    className="formContainer"
  >
    <label
      className="label"
      htmlFor="Label"
    >
      Label
    </label>
    <div
      className="textLine"
    >
      <input
        className="input"
        id="Label"
        name="Label"
        type="text"
      />
      <svg
        class="icon"
        fill="none"
        height="24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M12 5C7 5 2.73 8.11 1 12.5 2.73 16.89 7 20 12 20s9.27-3.11 11-7.5C21.27 8.11 17 5 12 5Zm0 12.5c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5Zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3Z"
        />
      </svg>
    </div>
  </div>
  <div
    className="assistiveText"
  >
    Assistive text
  </div>
</div>
`;
